fixed gestures not working on mobile

--- a/src/app/card-viewer/card-viewer.component.scss
+++ b/src/app/card-viewer/card-viewer.component.scss
@@ -9,6 +9,7 @@
     backface-visibility: hidden;
     overflow-y: auto;
     overflow-x: auto;
+    touch-action: pan-y !important; // fixes swipe gestures not working with overfow auto
 }
 
 .back,
